--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -99,49 +99,60 @@ html(lang="uk")
 							'Також в нашій компанії ви можете замовити дизайн та виробництво зовнішньої вивіски будь-якого типу: композитні, неонові, світлодіодні, плоскі та об’ємні, а також вивіски з інкрустацією букв.',
 							'Відвідайте наші сторінки в соціальних мережах facebook та instagram.'
 						)
-				section.creating 
-					h2.sec-title ВИГОТОВЛЕННЯ ЗОВНІШНЬОЇ РЕКЛАМИ. РОЗРОБКА МОНТАЖ ТА СЕРВІС.
-					ul.adv-examples.flex-sb 
-						li
-							a.choosen-item(href="#") об'ємні світлові літери
-						li
-							a(href="#") вивіски. світлові вивіски
-						li
-							a(href="#") неонові вивіски
-						li
-							a(href="#") обʼємні козирки
-						li
-							a(href="#") вхідна група
-						li
-							a(href="#") вітрини. наклеювання плівкою ORACAL
-						li
-							a(href="#") штендери. інформаційні щити. вуличні таблички, банери
-					.creating-screen.choosen-screen
-						.fig-list.flex-sb 
-							+creatingFigure(
-								"img/ll_bidonchik.png",
-								"Обʼємні літери для компанії \"БІДОНЧИК\"",
-								"Обʼємні літери для компанії \"БІДОНЧИК\"",
-								"????",
-								"30 СМ"
-							)
-							+creatingFigure(
-								"img/ll_utis.png",
-								"Обʼємні літери для компанії \"ЮТІС\"",
-								"Обʼємні літери для компанії \"ЮТІС\"",
-								"????",
-								"30 СМ"
-							)
-							+creatingFigure(
-								"img/ll_dnipro.png",
-								"Обʼємні літери для компанії \"DNIPRO M\"",
-								"Обʼємні літери для компанії \"DNIPRO M\"",
-								"????",
-								"30 СМ"
-							)
-						article.screen-desc 
-							h2.sec-title На даний час об’ємні букви (літери) є одним з найефективнішим видом зовнішньої реклами в багатьох сферах бізнесу.
-							p.sec-desc Їх Об’ємний 3D-Ефект Дає Змогу Значно Краще Привернути Увагу Потенційного Клієнта До Вашої Рекламної Вивіски, Чи Взагалі До Будь-Якої Зовнішньої Реклами. Гарний ефект об’ємні букви (літери), дають при першій комунікації з потенційним клієнтом, адже це підкреслює імідж компанії та її солідність. Також об’ємні рекламні букви (літери) замовляють для проведення весільних, святкових (дні народження, ювілеї, корпоративи) або іміджевих (презентацій, виставка)фотосесій.
-							+buttonLine
+				//- section creating
+				include components/creating 
+				a#facades
+				section.facades 
+					h2.sec-title ВЕНТИЛЬОВАНІ ФАСАДИ (МОНТАЖ) СИСТЕМИ З АЛЮМІНІЄВОГО КОМПОЗИТУ.
+					.sec-desc
+						p Вентильовані фасади – сучасний метод оформлення фасадів будівель та приміщень, які дозволяють значно покращити як естетичний вигляд будівель, так і його звуко та термоізоляцію.
+						p Вентильовані фасади будівель, чи навісний фасад – система, що складається з облицювальних матеріалів, (алюмінієві композитні панелі) які кріпляться на каркас зі сталі нержавійки чи цинкування, або алюмінієвий каркас опорної стіни чи моноліту. Основною відмінністю та перевагою вентильованого фасаду – циркуляція повітря між облицювальною панеллю та стіною. Це дозволяє прибрати вологу та конденсат з конструкції.
+					.fig-list.flex-sb 
+						+creatingFigure(
+							"img/vf_veloman.jpg",
+							"Вентильований фасад для компанії \"VELOMAN\"",
+							"Вентильований фасад для компанії \"VELOMAN\"",
+							"????"
+						)
+						+creatingFigure(
+							"img/vf_second.jpg",
+							"Вентильований фасад для компанії \"VELOMAN\"",
+							"Вентильований фасад для компанії \"VELOMAN\"",
+							"????"
+						)
+						+creatingFigure(
+							"img/vf_bubbles.jpg",
+							"Вентильований фасад для компанії \"BUBBLES\"",
+							"Вентильований фасад для компанії \"BUBBLES\"",
+							"????"
+						)
+					+buttonLine
+				a#promo
+				section.promo 
+					h2.sec-title акції
+					.promo-line.flex-sb 
+						+promo(
+							'вивіска за вигідною ціною', 
+							'260 ГРН ЗА (50 СМ НА 100 СМ)',
+							'Надаємо гарантію на вивіску (роботу та матеріали). Здійснюємо гарантійний та поточний ремонт. Надаємо всі необхідні дозвільні документи. Працюємо прозоро, відкрито.',
+							'оцинкована жесть',
+							'пластик ПВХ т.3 мм',
+							'алюмінієвий композит',
+							'ламінацією Оракал')
+						+promo(
+							'лайтбокс фігурний та світловий', 
+							'4200 ГРН ЗА М. КВ.',
+							'Надаємо гарантію на вивіску (роботу та матеріали). Здійснюємо гарантійний та поточний ремонт. Надаємо всі необхідні дозвільні документи. Працюємо прозоро, відкрито.',
+							'пластик виробництво Німеччина',
+							'гарантія на світлодіоди 12 місяців',
+							'дизайн 3D макета на вибір')
+						+promo(
+							'літери світлові, обʼємні з підсвіткою', 
+							'1176 ГРН ВИСОТА 30 СМ',
+							'Надаємо гарантію на вивіску (роботу та матеріали). Здійснюємо гарантійний та поточний ремонт. Надаємо всі необхідні дозвільні документи. Працюємо прозоро, відкрито.',
+							'ціна за одну літеру',
+							'лазерна порізка',
+							'надяскраві світлодіоди',
+							'різні шрифти')
 		include components/footer.pug
 		script(src="js/index.js") 
