--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -3,7 +3,7 @@ header
     .header-soc
       .wrapper.flex-sb 
         a.tel(href="tel:+380679047738") 067 904 77 38
-        a(href="#") 
+        a(href="index.html") 
           img.logo(src="img/logo.png" alt="Логотип Реклами Поділля")
         +soc-line
     nav.menu.wrapper 
@@ -15,9 +15,9 @@ header
         li
           a(href="#services") послуги
         li
-          a(href="#") фасади
+          a(href="#facades") фасади
         li
-          a(href="#") акції
+          a(href="#promo") акції
         li
-          a(href="#") контактити
+          a(href="#contacts") контактити
     
