--- a/src/pug/helpers/mixins.pug
+++ b/src/pug/helpers/mixins.pug
@@ -41,7 +41,7 @@ mixin preference(img, title, desc1, desc2)
       p=desc1 
       p=desc2 
     .order
-      a.order-link(href="#order") замовити 
+      a.order-link(href="#contacts") замовити 
 
 mixin service(title, desc1, desc2)
   .service 
@@ -84,4 +84,4 @@ mixin promo( title, price, desc, ...items)
           li= item
       p=desc
     .order
-      a.order-link(href="#order") замовити 
+      a.order-link(href="#contacts") замовити 
