--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -27,7 +27,7 @@ html(lang="uk")
 						a(href="#") літери
 					li 
 						a(href="#") банери
-				+button('g', '#order', 'замовити')
+				+button('g', '#contacts', 'замовити')
 			.wrapper
 				a#about-us
 				section.order-adv 
@@ -53,7 +53,7 @@ html(lang="uk")
 							'Також ми пропонуємо  оформлення фасаду комерційного приміщення.'
 						)
 				section.partners
-					h2.sec-title Наші партнери:
+					b.sec-title Наші партнери:
 					.slider-line 
 						img(src="img/ofice_center.png", alt="Логотип компанії \"Офіс центр\"")
 						img(src="img/zbruch_palac.png", alt="Логотип компанії \"Zbruch Palace\"")
@@ -129,7 +129,7 @@ html(lang="uk")
 					+buttonLine
 				a#promo
 				section.promo 
-					h2.sec-title акції
+					b.sec-title акції
 					.promo-line.flex-sb 
 						+promo(
 							'вивіска за вигідною ціною', 
@@ -154,5 +154,42 @@ html(lang="uk")
 							'лазерна порізка',
 							'надяскраві світлодіоди',
 							'різні шрифти')
+				a#contacts
+				section.contacts 
+					b.sec-title контакти
+					.flex-sb
+						form.half(action="#" method="POST")  
+							p.order замовити послугу
+							.inputs 
+								p.name
+									input#name(type="text", name="name" required)
+									label(for="name") Ваше імʼя*
+								p.email 
+									input#email(type="text", name="email" required)
+									label(for="email") Ваше емейл*
+								p.phone 
+									input#phone(type="tel", name="phone")
+									label(for="phone") Ваш номер телефону
+								p.topic 
+									input#topic(type="text", name="topic")
+									label(for="topic") Тема повідомлення
+								p.message
+									textarea#message(name="message", cols="30", rows="10", required)  
+									label(for="message") Ваше повідомлення
+								p.agreement 
+									input#agreement(type="checkbox", name="agreement")
+									label(for="agreement") Я згодний (-на) на обробку персональних данних
+							p.button-line
+								input.g-button.button(type="submit", value="відправити")
+						.half.map-half 
+							.contact-info
+								p 
+									a.tel(href="tel:+380679047738") 067 904 77 38
+								p 
+									address м. Хмельницький, вул. Кам'янецька 122 БЦ “Оріт”, офіс 316
+								+soc-line
+							.map
+								<iframe src="https://www.google.com/maps/d/embed?mid=1e8eIGtvIxX-P0DVk1aDMQs_x91NFk58&ehbc=2E312F"></iframe>
+
 		include components/footer.pug
 		script(src="js/index.js") 
