--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -114,6 +114,7 @@ section
   padding-top: 100px
 
 .sec-title 
+  display: block
   font-size: 40rem
   line-height: 49rem
   font-weight: 600
@@ -190,14 +191,14 @@ section
   &:hover 
     color: #943F78
     &::before 
-      background-position-x: -26px
+      background-position-x: 26px
 
 /* -------------------------------------------------------------------------- */
 /*                                  PARTNERS                                  */
 /* -------------------------------------------------------------------------- */
 
 .partners
-  h2 
+  .sec-title 
     margin-bottom: 40px
 
 .slider-line
@@ -216,7 +217,7 @@ section
     margin: 45px 0 80px
 
 .services-list 
-  h2 
+  .sec-title
     margin-bottom: 40px
 
 .service 
@@ -291,7 +292,7 @@ section
 /* -------------------------------------------------------------------------- */
 
 .creating 
-  h2 
+  .sec-title
     margin-bottom: 40px
   
 
@@ -344,7 +345,7 @@ section
     margin-bottom: 10px
 
 .screen-desc 
-  h2
+  .sec-title
     font-size: 24rem
     line-height: normal
     margin-bottom: 25px
@@ -373,7 +374,7 @@ section
 
 .promo 
   align-items: stretch
-  h2 
+  .sec-title
     margin-bottom: 90px
   .gradient-bg
     display: flex
@@ -416,3 +417,118 @@ section
       border-radius: 50%
       background-color: $textDark
       transform: translate(-50%, -50%)
+  
+/* -------------------------------------------------------------------------- */
+/*                                    ORDER                                   */
+/* -------------------------------------------------------------------------- */
+
+.contacts
+  .half
+    width: 45%
+  .map-half
+    width: 50%
+  .sec-title
+    margin-bottom: 45px
+  .order 
+    font-size: 18rem
+    font-weight: 600
+    text-transform: uppercase
+  .g-button 
+    border: none 
+    color: #fff
+    margin: 0 auto
+
+.inputs 
+  display: grid
+  grid-template-columns: repeat(2, 1fr)
+  grid-gap: 20px 30px
+  padding: 20px 0
+  margin-bottom: 10px
+  p 
+    position: relative
+  p:not(.agreement) 
+    padding-top: 27rem
+  .agreement 
+    display: flex
+    align-items: center
+    label 
+      font-size: 16rem
+      font-weight: 400
+  input:not([type=checkbox]),
+  textarea 
+    display: inline-block 
+    width: 100%
+    padding: 9px 18px
+    border: 1px solid $textDark
+    border-radius: 5px
+    font-size: 14rem
+    &:focus
+      outline: none 
+      border: 1px solid $primaryBlue
+  textarea 
+    resize: vertical
+    max-height: 110px
+    padding: 10px
+  label 
+    font-size: 14rem
+    font-weight: 600
+  input:not([type=checkbox])+label,
+  textarea+label
+    position: absolute 
+    top: 0 
+    left: 0
+  input[type=checkbox]
+    position: relative
+    width: 20px
+    height: 20px
+    border-radius: 2px
+    margin-right: 10px
+    opacity: 0
+
+    &+label
+      &:before,
+      &:after
+        content: ''
+        position: absolute 
+        top: 0
+        left: 0
+      &:before 
+        width: 20px
+        height: 20px
+        border: 1px solid $textDark
+        background-color: $trs
+        border-radius: 2px
+      &:after
+        border-radius: 2px
+        top: 5.5px
+        left: 5px
+        width: 10px
+        height: 6px
+        border: 2px solid $textTButton
+        border-right: none
+        border-top: none
+        transform: rotate(-45deg)
+        display: none
+    &:checked + label 
+      &:before 
+        border-color: $primaryBlue
+      &:after
+        display: block
+
+.message,
+.agreement 
+  grid-column: 1/3
+
+.map 
+  overflow: hidden
+  border-radius: 5px
+  iframe 
+    border: none
+    margin-top: -62px
+    width: 100%
+    height: 386px
+
+.contact-info 
+  margin-bottom: 30px
+  p 
+    margin-bottom: 20px
