--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -1,1 +1,10 @@
-footer
+footer 
+  .wrapper
+    .footer-line.flex-sb 
+      .footer-logo 
+        img(src="img/footer_logo.png", alt="Реклама Поділля. Розробки та виготовлення зовнішньої реклами")
+      +soc-line 
+      a.policy(href="#") політика конфіденційності 
+    p.copy 
+      +svg('img/sprite.svg#copy')
+      span copyright by “Реклама поділля”
