--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -419,10 +419,11 @@ section
       transform: translate(-50%, -50%)
   
 /* -------------------------------------------------------------------------- */
-/*                                    ORDER                                   */
+/*                                  CONTACTS                                  */
 /* -------------------------------------------------------------------------- */
 
 .contacts
+  padding-bottom: 100px
   .half
     width: 45%
   .map-half
