--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -49,7 +49,8 @@ header
   backdrop-filter: blur(10px)
   z-index: 10
 
-.header-soc
+.header-soc,
+footer
   position: relative
   padding: 10px 0 7px
   &::before 
