--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -1,7 +1,7 @@
 footer 
   .wrapper
     .footer-line.flex-sb 
-      .footer-logo 
+      a(href="/").footer-logo 
         img(src="img/footer_logo.png", alt="Реклама Поділля. Розробки та виготовлення зовнішньої реклами")
       +soc-line 
       a.policy(href="#") політика конфіденційності 
