creating section js toggle adv

--- a/src/pug/components/creating.pug
+++ b/src/pug/components/creating.pug
@@ -2,20 +2,27 @@ section.creating
   h2.sec-title ВИГОТОВЛЕННЯ ЗОВНІШНЬОЇ РЕКЛАМИ. РОЗРОБКА МОНТАЖ ТА СЕРВІС.
   ul.adv-examples.flex-sb 
     li
-      a.choosen-item(href="#") об'ємні світлові літери
+      //- light letters
+      a.choosen-item(href="#" data-btn-name="ll") об'ємні світлові літери
     li
-      a(href="#") вивіски. світлові вивіски
+      //- light signs
+      a(href="#" data-btn-name="ls") вивіски. світлові вивіски 
     li
-      a(href="#") неонові вивіски
+      //- neon signs
+      a(href="#" data-btn-name="ns") неонові вивіски
     li
-      a(href="#") обʼємні козирки
+      //- volumetric visors
+      a(href="#" data-btn-name="vv") обʼємні козирки
     li
-      a(href="#") вхідна група
+      //- entrance group
+      a(href="#" data-btn-name="eg") вхідна група
     li
-      a(href="#") вітрини. наклеювання плівкою ORACAL
+      //- showcase
+      a(href="#" data-btn-name="sc") вітрини. наклеювання плівкою ORACAL
     li
-      a(href="#") штендери. інформаційні щити. вуличні таблички, банери
-  .creating-screen.choosen-screen
+      //- pillars
+      a(href="#" data-btn-name="pl") штендери. інформаційні щити. вуличні таблички, банери
+  .creating-screen.choosen-screen(data-block-name="ll")
     .fig-list.flex-sb 
       +creatingFigure(
         "img/ll_bidonchik.png",
@@ -41,4 +48,166 @@ section.creating
     article.screen-desc 
       h2.sec-title На даний час об’ємні букви (літери) є одним з найефективнішим видом зовнішньої реклами в багатьох сферах бізнесу.
       p.sec-desc Їх Об’ємний 3D-Ефект Дає Змогу Значно Краще Привернути Увагу Потенційного Клієнта До Вашої Рекламної Вивіски, Чи Взагалі До Будь-Якої Зовнішньої Реклами. Гарний ефект об’ємні букви (літери), дають при першій комунікації з потенційним клієнтом, адже це підкреслює імідж компанії та її солідність. Також об’ємні рекламні букви (літери) замовляють для проведення весільних, святкових (дні народження, ювілеї, корпоративи) або іміджевих (презентацій, виставка)фотосесій.
+      +buttonLine
+  .creating-screen(data-block-name="ls")
+    .fig-list.flex-sb 
+      +creatingFigure(
+        "img/ls_technoprostir.png",
+        "Вивіска для компанії \"ТЕХНОПРОСТІР\"",
+        "Вивіска для компанії \"ТЕХНОПРОСТІР\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )
+      +creatingFigure(
+        "img/ls_hearty_yard.png",
+        "Обʼємні літери для компанії \"СИТНИЙ ДВІР\"",
+        "Обʼємні літери для компанії \"СИТНИЙ ДВІР\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )
+      +creatingFigure(
+        "img/ls_repair_hall.png",
+        "Обʼємні літери для компанії \"РЕМОНТ ХОЛЛ\"",
+        "Обʼємні літери для компанії \"РЕМОНТ ХОЛЛ\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )
+    article.screen-desc 
+      h2.sec-title ОБ’ЄМНІ ЛОГОТИПИ КОМПАНІЙ.ВИВІСКА З ОБ’ЄМНИМИ ЛІТЕРАМИ.
+      p.sec-desc Вивіски, лайтбокси з об'ємними літерами – поширений вид візуальних знаків, що застосовуються, як зовні, так і всередині приміщення.
+      +buttonLine
+  .creating-screen(data-block-name="ns")
+    .fig-list.flex-sb 
+      +creatingFigure(
+        "img/ns_biliy_naliv.png",
+        "Вивіска для компанії \"БІЛИЙ НАЛИВ\"",
+        "Вивіска для компанії \"БІЛИЙ НАЛИВ\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )
+      +creatingFigure(
+        "img/ns_ajour.png",
+        "Вивіска для компанії \"AJOUR\"",
+        "Вивіска для компанії \"AJOUR\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )
+      +creatingFigure(
+        "img/ns_rendez_vous.png",
+        "Обʼємні літери для компанії \"RENDEZ-VOUS\"",
+        "Обʼємні літери для компанії \"RENDEZ-VOUS\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )
+    article.screen-desc 
+      h2.sec-title СКЛЯНА ТРУБКА З ІНЕРТНИМ ГАЗОМ.
+      p.sec-desc Характерною рисою є скляна трубка, наповнена газом - неоном.Виготовляють неонові вивіски по засобу нагріву трубки та закачування газу. Після застосування газу - подається висока напруга і трубка випромінює світло. Індивідуальний колірний діапазон досягається внаслідок використання різних і іноді декількох інертних газів.
+      +buttonLine
+  .creating-screen(data-block-name="vv")
+    .fig-list.flex-sb 
+      +creatingFigure(
+        "img/vv_kapcake.png",
+        "Обʼємний козирок для компанії \"КАПКЕЙК\"",
+        "Обʼємний козирок для компанії \"КАПКЕЙК\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )
+      +creatingFigure(
+        "img/vv_kapcake.png",
+        "Обʼємний козирок для компанії \"КАПКЕЙК\"",
+        "Обʼємний козирок для компанії \"КАПКЕЙК\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )
+      +creatingFigure(
+        "img/vv_kapcake.png",
+        "Обʼємний козирок для компанії \"КАПКЕЙК\"",
+        "Обʼємний козирок для компанії \"КАПКЕЙК\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )      
+    article.screen-desc 
+      h2.sec-title ОБ’ЄМНІ КОЗИРКИ РІЗНИХ КОНФІГУРАЦІЙ.
+      p.sec-desc На даний час об’ємні козирки є одним з основних елементів комплексу фасадних конструкцій при оформлені будь-якого комерційного приміщення. Також може використовуватись як окремий елемент вхідної групи.
+      +buttonLine
+  .creating-screen(data-block-name="eg")
+    .fig-list.flex-sb 
+      +creatingFigure(
+        "img/eg_ofice_center.png",
+        "Вхідна група для компанії \"ОФІС - ЦЕНТР\"",
+        "Вхідна група для компанії \"ОФІС - ЦЕНТР\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )
+      +creatingFigure(
+        "img/eg_ofice_center.png",
+        "Вхідна група для компанії \"ОФІС - ЦЕНТР\"",
+        "Вхідна група для компанії \"ОФІС - ЦЕНТР\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )
+      +creatingFigure(
+        "img/eg_ofice_center.png",
+        "Вхідна група для компанії \"ОФІС - ЦЕНТР\"",
+        "Вхідна група для компанії \"ОФІС - ЦЕНТР\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )      
+    article.screen-desc 
+      h2.sec-title ВХІДНА ГРУПА. КОМПЛЕКС ЕЛЕМЕНТІВ ЗОВНІШНЬОЇ РЕКЛАМИ.
+      p.sec-desc Вхідна група — це комплекс з елементів зовнішньої реклами (світових вивісок, об’ємних та світлових літер, лайтбоксі, чи звичайних вивісок), вітрин поклеєні плівкою, підсвітки, та обшивка фасаду алюмінієвими панелями та іншими якісними матеріалами.
+      +buttonLine
+  .creating-screen(data-block-name="sc")
+    .fig-list.flex-sb 
+      +creatingFigure(
+        "img/sc_teztour.png",
+        "Плівка для компанії \"TEZTOUR\"",
+        "Плівка для компанії \"TEZTOUR\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )
+      +creatingFigure(
+        "img/sc_teztour.png",
+        "Плівка для компанії \"TEZTOUR\"",
+        "Плівка для компанії \"TEZTOUR\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )
+      +creatingFigure(
+        "img/sc_teztour.png",
+        "Плівка для компанії \"TEZTOUR\"",
+        "Плівка для компанії \"TEZTOUR\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )
+    article.screen-desc 
+      h2.sec-title ПОКЛЕЙКА ВІТРИН.
+      p.sec-desc Вартість наклеювання складає 350 грн за метр квадратний. Для більш детальною інформацією зверніться до наших менеджерів.Консультації, заміри, розрахунки безкоштовні.Працюємо з юридичними та фізичними особами. Надаємо всі фінансові та супровідні документи.
+      +buttonLine
+  .creating-screen(data-block-name="pl")
+    .fig-list.flex-sb 
+      +creatingFigure(
+        "img/pl_z_cafe.png",
+        "Табличка для компанії \"Z-CAFE\"",
+        "Табличка для компанії \"Z-CAFE\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )
+      +creatingFigure(
+        "img/pl_z_cafe.png",
+        "Табличка для компанії \"Z-CAFE\"",
+        "Табличка для компанії \"Z-CAFE\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )
+      +creatingFigure(
+        "img/pl_z_cafe.png",
+        "Табличка для компанії \"Z-CAFE\"",
+        "Табличка для компанії \"Z-CAFE\"",
+        "1176грн за 1 літеру",
+        "30 СМ"
+      )
+    article.screen-desc 
+      h2.sec-title ШТЕНДЕРИ, ІНФОРМАЦІЙНІ ЩИТИ, ВУЛИЧНІ ТАБЛИЧКИ, БАНЕРИ
+      p.sec-desc Штендер – це компактна, мобільна, переносна рекламна конструкція, яка користується великою популярністю в людних місцях. Частіше штендери ставлять біля дороги чи тротуару, недалеко від рекламованого об’єкта, зазвичай з вказівною стрілочкою.
       +buttonLine
