--- a/src/pug/helpers/mixins.pug
+++ b/src/pug/helpers/mixins.pug
@@ -30,7 +30,7 @@ mixin button(type, href='#', content)
 mixin buttonLine
   .button-line 
     +button('g', '#order', 'замовити')
-    +button('t', '#order', 'детальніше')
+    //- +button('t', '#order', 'детальніше')
 
 mixin preference(img, title, desc1, desc2)
   .preference
