--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -55,14 +55,22 @@ html(lang="uk")
 				section.partners
 					b.sec-title Наші партнери:
 					.slider-line 
-						img(src="img/ofice_center.png", alt="Логотип компанії \"Офіс центр\"")
-						img(src="img/zbruch_palac.png", alt="Логотип компанії \"Zbruch Palace\"")
-						img(src="img/chip.png", alt="Логотип компанії \"ЧІП\"")
-						img(src="img/seven_ocean.png", alt="Логотип компанії \"7 океан\"")
-						img(src="img/ajour.png", alt="Логотип компанії \"Ajour\"")
-						img(src="img/fielmann.png", alt="Логотип компанії \"Fielmann\"")
-						img(src="img/technoprostir.png", alt="Логотип компанії \"Technoprostir\"")
-						img(src="img/ukrgazbank.png", alt="Логотип компанії \"Укргазбанк\"")
+						.slider-item 
+							img(src="img/ofice_center.png", alt="Логотип компанії \"Офіс центр\"")
+						.slider-item 
+							img(src="img/zbruch_palac.png", alt="Логотип компанії \"Zbruch Palace\"")
+						.slider-item 
+							img(src="img/chip.png", alt="Логотип компанії \"ЧІП\"")
+						.slider-item 
+							img(src="img/seven_ocean.png", alt="Логотип компанії \"7 океан\"")
+						.slider-item 
+							img(src="img/ajour.png", alt="Логотип компанії \"Ajour\"")
+						.slider-item 
+							img(src="img/fielmann.png", alt="Логотип компанії \"Fielmann\"")
+						.slider-item 
+							img(src="img/technoprostir.png", alt="Логотип компанії \"Technoprostir\"")
+						.slider-item 
+							img(src="img/ukrgazbank.png", alt="Логотип компанії \"Укргазбанк\"")
 				a#services
 				section.services
 					.services-desc
