--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -202,11 +202,20 @@ section
     margin-bottom: 40px
 
 .slider-line
-  display: flex
-  column-gap: 40px
+  display: grid
+  grid-auto-flow: column
+  grid-template-columns: repeat(6, 15%)
+  column-gap: 2%
   overflow-x: hidden
+
+.slider-item
+  display: flex
+  justify-content: center
+  align-items: center
   img 
-    height: 100px
+    width: 100%
+    max-height: 100px
+    object-fit: contain
 
 /* -------------------------------------------------------------------------- */
 /*                                  SERVICES                                  */
@@ -306,6 +315,26 @@ section
     font-size: 14rem
     font-weight: 600
     transition: padding-left $trs, padding-right $trs
+
+.creating-screen
+  // animation: appearance .5s linear backwards reverse
+  display: none
+  // transition: $trs
+
+.choosen-screen
+  animation: appearance 1s linear forwards
+  display: block
+
+@keyframes appearance
+  0%
+    display: none
+    opacity: 0
+  2%
+    display: block
+    opacity: 0
+  100% 
+    display: block
+    opacity: 1
 
 .choosen-item 
   font-weight: 700
