fix svg sprite for firefox

--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -6,5 +6,5 @@ footer
       +soc-line 
       a.policy(href="#") політика конфіденційності 
     p.copy 
-      +svg('img/sprite.svg#copy')
+      +svg('#copy')
       span copyright by “Реклама поділля”
