--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,6 +10,8 @@ html(lang="uk")
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 	body 
+		include helpers/sprite.pug
+
 		include helpers/mixins.pug
 
 		include components/header.pug
@@ -35,19 +37,19 @@ html(lang="uk")
 					p.sec-desc Реклама Поділля – агенція в м. Хмельницькому, що розробляє зовнішню рекламу. Здійснює монтаж рекламних конструкцій. Розробляє, починаючи з 3D макета, виготовляє та монтує вивіски від звичайних щитових вивісок, світлових коробів, лайтбоксів світлових, об’ємних вивісок, до складних дахових вивісок, світлових літер, об’ємних букв, літер з різними способами підсвічування.
 					.preferences.flex-sb 
 						+preference(
-							'img/sprite.svg#sertificate',
+							'#sertificate',
 							'СЕРТИФІКОВАНІ, ЯКІСНІ МАТЕРІАЛИ ДЛЯ ВИГОТОВЛЕННЯ ЗОВНІШНЬОЇ РЕКЛАМИ',
 							'Реклама Поділля, співпрацює з постачальниками лише сертифікованих високоякісних матеріалів, безпечної та якісної електрики, підсвітки, що гарантує високу якість та довговічність зовнішньої реклами.',
 							'На всю рекламну продукцію, вивіски, лайтбокси, літери світлові об’ємні, неонові вивіски, банери, штендери, таблички адресні – надається документація, дозволи, та гарантія.'
 						)
 						+preference(
-							'img/sprite.svg#prices',
+							'#prices',
 							'Вигідні ціни',
 							'Ми підібрали найдоступніші ціни на вивіски, світлові, фігурні, двосторонні лайтбокси (світловий короб), що дозволять, при цьому, отримати високоякісну зовнішню рекламу розроблену нашими фахівцями.',
 							'Також повноцінну гарантію, всі відповідні дозволи та фінансові документи. Постійне сервісне обслуговування. Наш, майже двадцятирічний досвід у сфері зовнішньої реклами з впевненістю дозволяє гарантувати це!'
 						)
 						+preference(
-							'img/sprite.svg#services',
+							'#services',
 							'великий спектр послуг',
 							'Виготовлення вивіски, лайтбокса, об’ємних літр та загалом зовнішньої реклами в цілому – кропіткий, багатоетапний процес, який в змозі виконати правильно тільки справжні професіонали. Зовнішня реклама – це різноманітність конструкцій, видів і технологій будь-якої складності – лайтбокси, світлові вивіски та світлові букви різного розміру, шрифту, способу підсвітки.',
 							'Також ми пропонуємо  оформлення фасаду комерційного приміщення.'
