creating select last line fix. some adaptive

--- a/src/pug/components/creating.pug
+++ b/src/pug/components/creating.pug
@@ -6,21 +6,27 @@ section.creating
       li.choosen-item(data-btn-name="ll")
         //- light letters
         a(href="#") об'ємні світлові літери
+      span.g-line
       li(data-btn-name="ls")
         //- light signs
         a(href="#") вивіски. світлові вивіски 
+      span.g-line
       li(data-btn-name="ns")
         //- neon signs
         a(href="#") неонові вивіски
+      span.g-line
       li(data-btn-name="vv")
         //- volumetric visors
         a(href="#") обʼємні козирки
+      span.g-line
       li(data-btn-name="eg")
         //- entrance group
         a(href="#") вхідна група
+      span.g-line
       li(data-btn-name="sc")
         //- showcase
         a(href="#") вітрини. наклеювання плівкою ORACAL
+      span.g-line
       li(data-btn-name="pl")
         //- pillars
         a(href="#") штендери. інформаційні щити. вуличні таблички, банери
