--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -49,8 +49,14 @@ h1
     &:first-child a::before
       display: none      
     &:last-child a::after
-      display: none      
-    
+      display: none   
+  @media screen and ( max-width: 1200px )
+    flex-wrap: wrap
+    li 
+      &:first-child a::before
+        display: block      
+      &:last-child a::after
+        display: block   
   
 .button
   display: inline-block
@@ -169,13 +175,28 @@ section
     margin-bottom: 15px
     text-transform: uppercase
   p 
-    font-size: 16rem
+    font-size: 1em
     font-weight: 300
     margin-bottom: 10px
   .desc
     margin-bottom: 20px
+    font-size: 16rem
 
-.preferences 
+.preference 
+  .desc
+    @media screen and ( max-width: 1250px )
+      max-height: 10em 
+      overflow-y: scroll
+      padding-right: 8px
+      &::-webkit-scrollbar
+        width: 5px
+      &::-webkit-scrollbar-thumb
+        background: #888
+        border-radius: 4px
+      &::-webkit-scrollbar-track
+        background: #e1e1e1
+        border-radius: 4px
+
 
 .order-link 
   display: inline-block
@@ -312,6 +333,8 @@ section
 .creating 
   .sec-title
     margin-bottom: 40px
+  .g-line 
+    display: none
   
 .adv-list-line 
   position: relative
@@ -325,43 +348,39 @@ section
       z-index: 1
       transform: translateX(-50%)
       background:#fff
+    .g-line 
+      display: none
     &.active-menu 
       li:not(.choosen-item) 
-        position: relative
         display: block
         padding: 15px 0
         margin: 0
-        &::before 
-          content: ''
-          position: absolute
-          bottom: 0
-          left: 0
-          width: 100%
-          height: 1px
-          background: $B-P-gradient
-          background-size: 200%
-        &:last-child::before 
-          display: none
       .choosen-item 
         order: -1
         &::before 
-          top: calc( 50% - 7.5px )
+          top: calc( 50% - 5px )
           transform: rotate(-45deg) scaleY(-1)
         a 
           border-radius: 5px 5px 0 0
+      .g-line 
+        display: block
+        &.none
+          display: none
     .choosen-item 
       position: relative
+      &+.g-line 
+        display: none
       a 
         text-align: left
-        padding-right: 65px
+        padding-right: 55px
       &::before
         content: ''
         position: absolute
-        top: calc( 50% - 15px )
+        top: calc( 50% - 10px )
         right: 25px
-        width: 15px
-        height: 15px
-        border: 4px solid $primaryBlue
+        width: 10px
+        height: 10px
+        border: 3px solid #fff
         border-top: none
         border-left: none
         border-radius: 1px
@@ -445,11 +464,6 @@ section
     object-fit: cover 
     object-position: center
     border-radius: 5px
-  .g-line 
-      display: block
-      height: 2px
-      background: $itemLine
-      margin: 15px 0
   figcaption 
     p 
       font-size: 14rem
@@ -458,6 +472,15 @@ section
     font-weight: 600
     color: $textTButton
     margin-bottom: 10px
+  .g-line 
+    display: block
+    height: 2px
+    margin: 15px 0
+
+.g-line 
+  width: 100%
+  background: $itemLine
+  height: 1px
 
 .screen-desc 
   .sec-title
@@ -614,10 +637,11 @@ section
         border: 1px solid $textDark
         background-color: $trs
         border-radius: 2px
+        box-sizing: border-box
       &:after
         border-radius: 2px
-        top: 5.5px
-        left: 5px
+        top: 5px
+        left: 4px
         width: 10px
         height: 6px
         border: 2px solid $textTButton
