adaptive to 768px

--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -127,7 +127,10 @@ address
     li,a,svg
       width: 20px
       height: 20px
-
+  @media screen and ( max-width: 1024px )
+    li,a,svg
+      width: 30px
+      height: 30px
 
 .menu 
   padding: 25px 0
