--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -19,5 +19,5 @@ header
         li
           a(href="#promo") акції
         li
-          a(href="#contacts") контактити
+          a(href="#contacts") контакти
     
