--- a/src/sass/components/footer.sass
+++ b/src/sass/components/footer.sass
@@ -16,6 +16,8 @@ footer
     width: 302px
     img 
       width: 100%
+    @media screen and ( max-width: 1024px )
+      width: 25%
 
 .policy 
   font-size: 14rem
