--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -149,7 +149,7 @@ section
     justify-content: center
     gap: 125px 50px
     .preference
-      width: 40%
+      width: calc( 50% - 25px )
   @media screen and ( max-width: 768px )
     gap: 80px 30px
     .preference
@@ -568,7 +568,7 @@ section
     justify-content: center
     gap: 90px 50px
     .promo-item
-      width: 40%
+      width: calc( 50% - 25px )
 
 .promo-item 
   padding-top: 75px
@@ -604,6 +604,8 @@ section
 
 .contacts
   padding-bottom: 100px
+  @media screen and ( max-width: 1024px )
+    padding-bottom: 75px
   .half
     width: 45%
   .map-half
