burger menu front

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -569,6 +569,9 @@ section
     gap: 90px 50px
     .promo-item
       width: calc( 50% - 25px )
+  @media screen and ( max-width: 768px )
+    .promo-item
+      width: 80%
 
 .promo-item 
   padding-top: 75px
