--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -40,6 +40,12 @@ header
   padding-top: 180px
   @media screen and ( max-width: 1660px )
     padding-top: 170px
+  @media screen and ( max-width: 768px )
+    padding-top: 79px
+    .wrapper 
+      width: auto
+      margin: 0
+      padding: 0
 
 .header-line 
   position: fixed
@@ -52,12 +58,72 @@ header
   z-index: 10
   @media screen and ( max-width: 1660px )
     height: 170px
+  @media screen and ( max-width: 768px )
+    display: flex
+    justify-content: space-between
+    align-items: center
+    height: 79px
+    padding: 10px 7%
+    &.active-menu 
+      height: 100vh
+      align-items: flex-start
+      justify-content: center
+      flex-wrap: wrap
+      align-content: start
+      .burger 
+        position: absolute
+        top: 20px
+        right: 7%
+        padding: 15px 0
+        span
+          opacity: 0
+        &::before
+          top: 15px
+          transform: rotate(45deg)
+        &::after
+          bottom: 15px
+          transform: rotate(-45deg)
+      .header-soc 
+        width: 100%
+      .logo-wrap 
+        order: -1
+        width: 100%
+        text-align: center
+        margin-bottom: 20px
+      .logo
+        width: 137px
+        height: 90px
+      .tel,
+      .soc-line 
+        display: flex
+      .header-soc 
+        padding-bottom: 30px
+        &::before
+          display: block
+          width: 100vw
+          left: -7vw
+        .wrapper
+          flex-wrap: wrap 
+          justify-content: space-between
+      .menu ul 
+        display: flex
+        flex-direction: column
+        text-align: center
+        padding-top: 30px
+        li
+          padding: 10px 0
+
+.header-soc 
+  @media screen and ( max-width: 768px ) 
+    padding: 0
+    &::before
+      display: none
 
 .header-soc,
 footer
   position: relative
   padding: 10px 0 7px
-  &::before 
+  &::before
     content: ''
     position: absolute
     bottom: 0
@@ -69,6 +135,7 @@ footer
       height: 1px
   .wrapper 
     align-items: center
+  
 
 .tel,
 address 
@@ -99,6 +166,8 @@ address
     color: $primaryBlue
   @media screen and ( max-width: 1660px )
     font-size: 16rem
+  @media screen and ( max-width: 768px )
+    display: none
 
 address
   &::before
@@ -109,6 +178,9 @@ address
 .logo
   width: 137px
   height: 90px
+  @media screen and ( max-width: 768px )
+    width: 90px
+    height: 55px
 
 .soc-line 
   display: inline-flex
@@ -131,6 +203,37 @@ address
     li,a,svg
       width: 30px
       height: 30px
+  @media screen and ( max-width: 768px )
+    display: none
+
+.burger 
+  display: none
+  @media screen and ( max-width: 768px ) 
+    position: relative
+    display: block 
+    padding: 12px 0
+    span 
+      display: block
+    &::before,
+    &::after
+      content: ''
+      position: absolute
+    &::before
+      top: 0
+    &::after
+      bottom: 0
+    span,
+    &::before,
+    &::after
+      left: 0
+      width: 40px
+      height: 7px
+      background: $B-P-gradient
+      background-size: 200%
+      border-radius: 2px
+      transition: $trs
+      
+      
 
 .menu 
   padding: 25px 0
@@ -146,3 +249,6 @@ address
     padding: 20px 0
     a 
       font-size: 16rem
+  @media screen and ( max-width: 768px )
+    ul 
+      display: none
