--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -15,7 +15,7 @@ header
         li
           a(href="#about-us") про нас
         li
-          a(href="#services") послуги
+          a(href="#service") послуги
         li
           a(href="#facades") фасади
         li
