--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -73,7 +73,7 @@ html(lang="uk")
 							img(src="img/technoprostir.png", alt="Логотип компанії \"Technoprostir\"")
 						.slider-item 
 							img(src="img/ukrgazbank.png", alt="Логотип компанії \"Укргазбанк\"")
-				a#services
+				a#service
 				section.services
 					.services-desc
 						h2.sec-title РЕКЛАМНІ ПОСЛУГИ. ВИГОТОВЛЕННЯ ЗОВНІШНЬОЇ РЕКЛАМИ
