--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -10,6 +10,8 @@
   background: #eee url(../img/bg-first_screen.jpg) center / cover
   @media screen and ( max-width: 1024px )
     padding: 150px 10%
+  @media screen and ( max-width: 500px )
+    padding: 125px 15px
 
 
 h1 
@@ -18,11 +20,29 @@ h1
   text-transform: uppercase
   line-height: 110%
   margin-bottom: 70px
+  @media screen and ( max-width: 768px ) 
+    margin-bottom: 45px
+  @media screen and ( max-width: 500px )
+    font-size: 50rem
+  @media screen and ( max-width: 425px )
+    font-size: 40rem
+    margin-bottom: 30px
+    
+    
 
 .adv-list 
   display: flex
   justify-content: center
   margin-bottom: 65px
+  @media screen and ( max-width: 768px ) 
+    margin-bottom: 40px
+  @media screen and ( max-width: 600px ) 
+    flex-direction: column
+    a 
+      width: 60%
+  @media screen and ( max-width: 550px ) 
+    a 
+      width: 80%
   a 
     position: relative
     display: inline-block
@@ -33,6 +53,9 @@ h1
     margin: 0 7.5px
     text-transform: uppercase
     transition: $trs
+    @media screen and ( max-width: 425px )
+      font-size: 30rem
+      padding: 5px 0
     &:hover 
       color: $primaryBlue
     &::before,
@@ -123,6 +146,8 @@ section
   padding-top: 100px
   @media screen and ( max-width: 1024px )  
     padding-top: 75px
+  @media screen and ( max-width: 500px )
+    padding-top: 50px
 
 .sec-title 
   display: block
@@ -130,11 +155,16 @@ section
   line-height: 49rem
   font-weight: 600
   text-transform: uppercase
+  @media screen and ( max-width: 500px )
+    font-size: 35rem
+    line-height: 43rem
 
 .sec-desc
   font-size: 18rem
   line-height: 22rem
   margin: 50px 0
+  @media screen and ( max-width: 768px )
+    margin: 30px 0
 
 .order-adv 
   & > p 
@@ -154,6 +184,12 @@ section
     gap: 80px 30px
     .preference
       width: calc(50% - 15px)
+  @media screen and ( max-width: 700px )
+    .preference 
+      width: 80%
+  @media screen and ( max-width: 500px )
+    .preference 
+      width: 100%
 
 .gradient-bg 
   position: absolute
@@ -216,6 +252,9 @@ section
       &::-webkit-scrollbar-track
         background: #e1e1e1
         border-radius: 4px
+    @media screen and ( max-width: 600px ) 
+      max-height: none 
+      overflow: auto
 
 
 .order-link 
@@ -259,6 +298,15 @@ section
   @media screen and ( max-width: 1024px )
     grid-template-columns: repeat(5, 18%)
     column-gap: 2.5%
+  @media screen and ( max-width: 768px )
+    grid-template-columns: repeat(4, 22%)
+    column-gap: 4%
+  @media screen and ( max-width: 600px )
+    grid-template-columns: repeat(3, 30%)
+    column-gap: 5%
+  @media screen and ( max-width: 375px )
+    grid-template-columns: repeat(2, 45%)
+    column-gap: 10%
     
 
 .slider-item
@@ -309,6 +357,9 @@ section
       transform: rotate(180deg)
     p
       animation: showDesc 1s linear forwards
+      @media screen and ( max-width: 768px )
+        animation: showDescAdaptive 1s linear forwards
+        
 
 @keyframes showDesc
   0%
@@ -325,6 +376,28 @@ section
     opacity: 0
   75% 
     max-height: 9em
+    padding-top: 10px
+    opacity: 0.5
+  100%
+    max-height: none
+    opacity: 1
+    padding-top: 10px
+
+@keyframes showDescAdaptive 
+  0%
+    max-height: 0
+    padding-top: 0
+    opacity: 0
+  25%
+    max-height: 7em
+    padding-top: 5px
+    opacity: 0
+  50% 
+    max-height: 14em  
+    padding-top: 10px
+    opacity: 0
+  75% 
+    max-height: 21em
     padding-top: 10px
     opacity: 0.5
   100%
@@ -446,6 +519,8 @@ section
       margin: 0
   @media screen and ( max-width: 1360px )
     width: 80% 
+  @media screen and ( max-width: 500px ) 
+    width: 100%
 
 
 .creating-screen
@@ -506,9 +581,15 @@ section
   @media screen and ( max-width: 768px )
     flex-wrap: wrap
     justify-content: center
-    row-gap: 20px
+    row-gap: 30px
     figure 
       width: calc( 50% - 10px )
+  @media screen and ( max-width: 550px )
+    figure 
+      width: 80%
+  @media screen and ( max-width: 500px )
+    figure 
+      width: 100%
 
 .g-line 
   width: 100%
@@ -547,6 +628,8 @@ section
   align-items: stretch
   .sec-title
     margin-bottom: 90px
+    @media screen and ( max-width: 768px )
+      margin-bottom: 70px
   .gradient-bg
     display: flex
     justify-content: center
@@ -572,6 +655,9 @@ section
   @media screen and ( max-width: 768px )
     .promo-item
       width: 80%
+  @media screen and ( max-width: 500px )
+    .promo-item 
+      width: 100%
 
 .promo-item 
   padding-top: 75px
@@ -609,12 +695,16 @@ section
   padding-bottom: 100px
   @media screen and ( max-width: 1024px )
     padding-bottom: 75px
+  @media screen and ( max-width: 500px ) 
+    padding-bottom: 50px
   .half
     width: 45%
   .map-half
     width: 50%
   .sec-title
     margin-bottom: 45px
+    @media screen and ( max-width: 768px )
+      margin-bottom: 25px
   .order 
     font-size: 18rem
     font-weight: 600
@@ -632,12 +722,16 @@ section
       order: -1
       margin-bottom: 45px
 
+
 .inputs 
   display: grid
   grid-template-columns: repeat(2, 1fr)
   grid-gap: 20px 30px
   padding: 20px 0
   margin-bottom: 10px
+  @media screen and ( max-width: 500px )
+    display: flex
+    flex-direction: column
   p 
     position: relative
   p:not(.agreement) 
