--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -2,9 +2,10 @@ footer
   .wrapper
     .footer-line.flex-sb 
       a(href="/").footer-logo 
-        img(src="img/footer_logo.png", alt="Реклама Поділля. Розробки та виготовлення зовнішньої реклами")
+        h2 <b>реклама</b> Поділля
+        p Розробки та виготовлення зовнішньої реклами
       +soc-line 
       a.policy(href="#") політика конфіденційності 
     p.copy 
       +svg('#copy')
-      span copyright by “Реклама поділля”
+      span copyright by “РЕКЛАМА ПОДІЛЛЯ”
