--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -482,7 +482,6 @@ section
         border: 3px solid #fff
         border-top: none
         border-left: none
-        border-radius: 1px
         transform: rotate(45deg)
         transition: transform $trs, top $trs
 
@@ -821,3 +820,7 @@ section
   margin-bottom: 30px
   p 
     margin-bottom: 20px
+
+address 
+  font-style: normal
+  text-transform: none
