--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,6 +9,9 @@ html(lang="uk")
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap" rel="stylesheet">
 	body 
 		include helpers/sprite.pug
 
@@ -207,7 +210,7 @@ html(lang="uk")
 								p 
 									a.tel(href="tel:+380679047738") 067 904 77 38
 								p 
-									address м. Хмельницький, вул. Кам'янецька 122 БЦ “Оріт”, офіс 316
+									address м. Хмельницький, вул. Кам'янецька 122 БЦ “ОРІТ”, офіс 316
 								+soc-line
 							.map
 								<iframe src="https://www.google.com/maps/d/embed?mid=1e8eIGtvIxX-P0DVk1aDMQs_x91NFk58&ehbc=2E312F"></iframe>
