--- a/src/sass/components/footer.sass
+++ b/src/sass/components/footer.sass
@@ -13,29 +13,41 @@ footer
   .footer-logo,
   .policy 
     display: inline-block
-    width: 302px
+    width: 30%
     img 
       width: 100%
-    @media screen and ( max-width: 1024px )
-      width: 25%
-  @media screen and ( max-width: 768px )
+  @media screen and ( max-width: 1200px )
     flex-wrap: wrap
     gap: 20px
-    .footer-logo,
+    .footer-logo 
+      width: 310px
     .policy
-      width: 40%
+      width: auto
     .soc-line 
       order: 1
       width: 100%
       justify-content: center
-  @media screen and ( max-width: 500px )
+  @media screen and ( max-width: 600px )
     flex-direction: column
-    .footer-logo 
-      width: 60%
-      @media screen and ( max-width: 375px )
-        width: 80%
-    .policy
+    align-items: center
+    text-align: center
+  .footer-logo 
+    h2 
+      font-family: 'Raleway', sans-serif
+      font-size: 31rem
+      font-weight: 500
+      color: $textTButton
+      text-transform: uppercase
+      b 
+        font-weight: 700
+    p 
+      font-family: "Times New Roman", Times, Baskerville, Georgia, serif
+      font-size: 12rem
+      font-weight: 700
+    @media screen and ( max-width: 600px ) 
       width: auto
+
+
 
 .policy 
   font-size: 14rem
